--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-# Compiled class file
+# Compiled class files
 *.class
 
-# Log file
+# Log files
 *.log
+*.out
+*.err
 
 # BlueJ files
 *.ctxt
@@ -22,3 +24,137 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Spring Boot specific
+/backend/target/
+/backend/.mvn/
+/backend/.idea/
+/backend/*.iml
+/backend/mvnw
+/backend/mvnw.cmd
+/backend/.mvn/wrapper/maven-wrapper.jar
+
+# STS (Spring Tool Suite) specific
+/.springBeans
+
+# IntelliJ IDEA specific
+/.idea/
+/*.iml
+/modules.xml
+/.DS_Store
+
+# Eclipse specific
+/.project
+/.classpath
+/.settings/
+/*.launch
+
+# VS Code specific
+/.vscode/
+
+# Node.js specific
+/node_modules/
+/npm-debug.log*
+/yarn-error.log
+/pnpm-debug.log*
+/lerna-debug.log*
+/package-lock.json
+/yarn.lock
+/pnpm-lock.yaml
+/.npm/
+/.npmrc
+/.node_repl_history
+/.yarn-cache/
+/.yarn-integrity
+/.env
+/.env.local
+/.env.development.local
+/.env.test.local
+/.env.production.local
+
+# React specific
+/frontend/node_modules/
+/frontend/npm-debug.log
+/frontend/yarn-error.log
+/frontend/.yarn-integrity
+/frontend/.env
+/frontend/.next/
+/frontend/out/
+/frontend/build/
+/frontend/dist/
+/frontend/.eslintcache
+/frontend/.parcel-cache/
+/frontend/.cache/
+/frontend/.nuxt/
+/frontend/.vuepress/dist/
+/frontend/.serverless/
+/frontend/.fusebox/
+/frontend/.rpt2_cache/
+/frontend/.rts2_cache/
+/frontend/.vscode/
+/frontend/public/static/
+/frontend/.expo/
+
+# Dependency directories
+/.pnp/
+/.pnp.js
+/frontend/.pnp/
+/frontend/.pnp.js
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Misc
+.DS_Store
+Thumbs.db
+
+# Bower dependency directory (used by older Node.js projects)
+/bower_components/
+
+# Coverage directory used by testing tools like Jest or Mocha
+/coverage/
+
+# nyc test coverage
+.nyc_output/
+
+# Grunt intermediate storage (used by task runners)
+/.grunt/
+
+# Parcel-bundler cache (used by the Parcel bundler)
+/.cache/
+
+# dotenv environment variables file
+.env
+.env.*.local
+
+# Next.js build output
+/.next/
+/out/
+
+# Gatsby files
+.cache/
+/public/
+
+# vuepress build output
+.vuepress/dist/
+
+# Serverless Framework
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Mac specific files
+.DS_Store
