--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,29 @@
 # Compiled class files
-*.class
+/backend/*.class
 
 # Log files
-*.log
-*.out
-*.err
+/backend/*.log
+/backend/*.out
+/backend/*.err
 
 # BlueJ files
-*.ctxt
+/backend/*.ctxt
 
 # Mobile Tools for Java (J2ME)
-.mtj.tmp/
+/backend/.mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+/backend/*.jar
+/backend/*.war
+/backend/*.nar
+/backend/*.ear
+/backend/*.zip
+/backend/*.tar.gz
+/backend/*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+/backend/hs_err_pid*
+/backend/replay_pid*
 
 # Spring Boot specific
 /backend/target/
@@ -35,22 +35,22 @@ replay_pid*
 /backend/.mvn/wrapper/maven-wrapper.jar
 
 # STS (Spring Tool Suite) specific
-/.springBeans
+/backend/.springBeans
 
 # IntelliJ IDEA specific
-/.idea/
-/*.iml
-/modules.xml
-/.DS_Store
+/backend/.idea
+/backend/*.iml
+/backend/modules.xml
+/backend/.DS_Store
 
 # Eclipse specific
-/.project
-/.classpath
-/.settings/
-/*.launch
+/backend/.project
+/backend/.classpath
+/backend/.settings/
+/backend/*.launch
 
 # VS Code specific
-/.vscode/
+/backend/.vscode/
 
 # Node.js specific
 /node_modules/
