--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>payment-service</module>
         <module>order-service</module>
+        <module>common-dtos</module>
     </modules>
 
 </project>
