--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,7 +11,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>fel.cvut.cz</groupId>
+    <groupId>cz.cvut.fel</groupId>
     <artifactId>backend</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -43,6 +43,14 @@
         <artifactId>spring-kafka-test</artifactId>
         <scope>test</scope>
     </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
