--- a/backend/order-service/src/main/resources/application.yml
+++ b/backend/order-service/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: order-service
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5431/order-db
@@ -33,3 +35,8 @@ spring:
 
 server:
   port: 8081
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://test:test@localhost:8000/eureka
