--- a/backend/payment-service/pom.xml
+++ b/backend/payment-service/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>common-dtos</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
