--- a/backend/payment-service/src/main/resources/application.yml
+++ b/backend/payment-service/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: payment-service
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5430/payment-db
@@ -26,3 +28,8 @@ spring:
 
 server:
   port: 8080
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://test:test@localhost:8000/eureka
