--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -21,6 +21,7 @@
         <module>order-service</module>
         <module>common-dtos</module>
         <module>api-gateway</module>
+        <module>discovery-service</module>
     </modules>
 
     <properties>
