--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -2,6 +2,19 @@ version: "3.8"
 
 services:
 
+  cart-db:
+    image: postgres:15
+    container_name: cart-db
+    environment:
+      POSTGRES_DB: cart-db
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: 123
+      PGDATA: /data/postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./data/cart-db:/data/postgres
+
   order-db:
     image: postgres:15
     container_name: order-db
