--- a/backend/inventory-service/src/main/resources/application.yml
+++ b/backend/inventory-service/src/main/resources/application.yml
@@ -14,17 +14,17 @@ spring:
         jwt:
           jwk-set-uri: http://localhost:9090/realms/dev/protocol/openid-connect/certs
 
-#  kafka:
-#    consumer:
-#      bootstrap-servers: localhost:9092
-#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-#      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-#      group-id: payment-event-group
-#      properties:
-#        spring:
-#          json:
-#            trusted:
-#              packages: "*"
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      group-id: cart-event-group
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "*"
 #    producer:
 #      bootstrap-servers: localhost:9092
 #      key-serializer: org.apache.kafka.common.serialization.StringSerializer
@@ -32,7 +32,7 @@ spring:
 
 
 server:
-  port: 8090
+  port: 0
 
 eureka:
   client:
