--- a/backend/cart-service/src/main/resources/application.yml
+++ b/backend/cart-service/src/main/resources/application.yml
@@ -17,16 +17,15 @@ spring:
           jwk-set-uri: http://localhost:9090/realms/dev/protocol/openid-connect/certs
 
   kafka:
-#    consumer:
-#      bootstrap-servers: localhost:9092
-#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-#      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-#      group-id: payment-event-group
-#      properties:
-#        spring:
-#          json:
-#            trusted:
-#              packages: "*"
+    consumer:
+      bootstrap-servers: localhost:9092
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "*"
     producer:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
