--- a/backend/order-service/src/main/resources/application.yml
+++ b/backend/order-service/src/main/resources/application.yml
@@ -39,3 +39,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://test:test@localhost:8000/eureka
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /api-docs
