--- a/backend/cart-service/src/main/resources/application.yml
+++ b/backend/cart-service/src/main/resources/application.yml
@@ -2,10 +2,10 @@ spring:
   application:
     name: cart-service
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/cart-db
-    username: admin
-    password: 123
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/cart-db?createDatabaseIfNotExist=true
+    username: root
+    password:
   jpa:
     hibernate:
       ddl-auto: update
