--- a/backend/inventory-service/src/main/resources/application.yml
+++ b/backend/inventory-service/src/main/resources/application.yml
@@ -2,11 +2,16 @@ spring:
   application:
     name: inventory-service
 
-  data:
-    mongodb:
-      database: product-db
-      authentication-database: admin
-      uri: mongodb://root:mongo@localhost:27017/${spring.data.mongodb.database}?authSource=${spring.data.mongodb.authentication-database}&readPreference=primaryPreferred&directConnection=true
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/product-db?createDatabaseIfNotExist=true
+    username: root
+    password:
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
   security:
     oauth2:
